Spark adapter: connect over Spark Connect, run a query, decode Arrow results (#467)
Milestone M6. Package net.hydromatic.morel.spark is compiled only
under the 'spark' Maven profile (JDK 17 and later), with protobuf
messages and gRPC stubs generated from Spark 4.0.0's .proto files;
on JDK 8 and 11 the package is excluded and Morel builds without it.
The rest of Morel sees only foreign.SparkBackend, an interface whose
load() instantiates the adapter by name.

A connection opens a gRPC channel and a session; sql() sends an
ExecutePlan request and returns rows. SparkTypes maps the result's
DataType schema to a Morel type (spec.md section 1: a column maps to
the plain type, nested nullable values to option, map and intervals
rejected), and ArrowDecoder converts the Arrow batches to Morel
values driven by that type, raising NULL_VALUE for a null that has
no room and CAST_OVERFLOW for a bigint that does not fit. Spark's
error condition comes from the "errorClass" metadata of the gRPC
status. The adapter uses Arrow's unsafe allocator, because the netty
one is incompatible with the netty that Calcite brings.

SparkTypesTest and ArrowDecoderTest run wherever the adapter
compiles; SparkConnectTest runs against the container when
-Dmorel.spark=true and SPARK_REMOTE are set.

Claude-Session: https://claude.ai/code/session_013QmgqnWtAemKhBkSeABJQ4